--- a/views/tenants/index.erb
+++ b/views/tenants/index.erb
@@ -1,1 +1,13 @@
-Listing tenants for apartment #3
+<h3>Tenants in <%= @apartment.address %></h3>
+<ul>
+  <% tenants = @apartment.tenants %>
+  <% tenants.each do |tenant| %>
+    <li><%= tenant.name %></li>
+    <li><%= tenant.age %></li>
+    <li><%= tenant.gender %></li>
+  <% end %>
+</ul>
+
+<a href='/apartments/<%= @apartment.id %>'>Back to Apartment</a>
+
+<a href='/apartments/<%= @apartment.id %>/tenants/new'>Add a Tenant</a>
