--- a/views/tenants/new.erb
+++ b/views/tenants/new.erb
@@ -1,1 +1,9 @@
-form for adding a new tenant
+<h2>Add a Tenant to an Apartment</h2>
+
+<form method="post" action="/apartments/<%= @apartment.id %>/tenants">
+  <input type="hidden" name="tenant[apartment_id]" value="<%= @apartment.id %>">
+  <input type="text" name ="tenant[name]" placeholder="Name">
+  <input type="text" name ="tenant[age]" placeholder="Age">
+  <input type="text" name ="tenant[gender]" placeholder="Gender">
+  <input type="submit">
+</form>
